# earwax

./: Cargo.toml  README.md  build.rs
examples/: main.rs
src/: ffi.rs  lib.rs  libearwax.c  log.rs  timestamp.rs
